--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 ucl_web_key_pass_homepage:
-    pattern:  /hello/{name}
+    pattern: /
     defaults: { _controller: UCLWebKeyPassBundle:Default:index }
