--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,23 @@
-ucl_web_key_pass_homepage:
+ucl_wkp_main_view:
     pattern: /
-    defaults: { _controller: UCLWebKeyPassBundle:Default:index }
+    defaults: { _controller: UCLWebKeyPassBundle:Main:view }
+
+ucl_wkp_node_view:
+    pattern: /{node-id}-{node}
+    defaults: { _controller: UCLWebKeyPassBundle:Node:view }
+
+ucl_wkp_node_edit:
+    pattern: /{node-id}-{node}/edit
+    defaults: { _controller: UCLWebKeyPassBundle:Node:view }
+
+ucl_wkp_node_add:
+    pattern: /{node-id}-{node}/add
+    defaults: { _controller: UCLWebKeyPassBundle:Node:view }
+
+ucl_wkp_node_move:
+    pattern: /{node-id}-{node}/move
+    defaults: { _controller: UCLWebKeyPassBundle:Node:view }
+
+ucl_wkp_node_remove:
+    pattern: /{node-id}-{node}/remove
+    defaults: { _controller: UCLWebKeyPassBundle:Node:view }
