Generic content for the tree view
And remove the MainController and its template, since Node can be used
instead.

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -19,7 +19,7 @@
 
 ucl_wkp_main_view:
     pattern: /
-    defaults: { _controller: UCLWebKeyPassBundle:Main:view }
+    defaults: { _controller: UCLWebKeyPassBundle:Node:view, node: Root }
 
 ucl_wkp_node_view:
     pattern: /{node}
