--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -39,7 +39,7 @@ ucl_wkp_category_edit:
 
 ucl_wkp_category_add_server:
     pattern: /category/{node_id}/add_server
-    defaults: { _controller: UCLWebKeyPassBundle:CategoryNode:view }
+    defaults: { _controller: UCLWebKeyPassBundle:CategoryNode:addServer }
 
 ucl_wkp_category_add_subcategory:
     pattern: /category/{node_id}/add_subcategory
