--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -61,7 +61,7 @@ ucl_wkp_server_edit:
 
 ucl_wkp_server_add_vm:
     pattern: /server/{node_id}/add_vm
-    defaults: { _controller: UCLWebKeyPassBundle:ServerNode:view }
+    defaults: { _controller: UCLWebKeyPassBundle:ServerNode:addVM }
 
 ucl_wkp_server_move:
     pattern: /server/{node_id}/move
