Action: move server
Attention, in the NodeForm class, the getParent() method is not needed,
and must NOT be added, else there is a strange error:

Could not load type "parent".

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -65,7 +65,7 @@ ucl_wkp_server_add_vm:
 
 ucl_wkp_server_move:
     pattern: /server/{node_id}/move
-    defaults: { _controller: UCLWebKeyPassBundle:ServerNode:view }
+    defaults: { _controller: UCLWebKeyPassBundle:ServerNode:move }
 
 ucl_wkp_server_remove:
     pattern: /server/{node_id}/remove
