--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -63,6 +63,10 @@ ucl_wkp_server_edit:
     pattern: /server/{node_id}/edit
     defaults: { _controller: UCLWebKeyPassBundle:ServerNode:edit }
 
+ucl_wkp_server_add_login:
+    pattern: /server/{node_id}/add_login
+    defaults: { _controller: UCLWebKeyPassBundle:ServerNode:addLogin }
+
 ucl_wkp_server_add_vm:
     pattern: /server/{node_id}/add_vm
     defaults: { _controller: UCLWebKeyPassBundle:ServerNode:addVM }
@@ -89,6 +93,10 @@ ucl_wkp_vm_edit:
     pattern: /vm/{node_id}/edit
     defaults: { _controller: UCLWebKeyPassBundle:VMNode:edit }
 
+ucl_wkp_vm_add_login:
+    pattern: /vm/{node_id}/add_login
+    defaults: { _controller: UCLWebKeyPassBundle:VMNode:addLogin }
+
 ucl_wkp_vm_add_misc:
     pattern: /vm/{node_id}/add_misc
     defaults: { _controller: UCLWebKeyPassBundle:VMNode:addMisc }
@@ -110,6 +118,10 @@ ucl_wkp_misc_view:
 ucl_wkp_misc_edit:
     pattern: /misc/{node_id}/edit
     defaults: { _controller: UCLWebKeyPassBundle:MiscNode:edit }
+
+ucl_wkp_misc_add_login:
+    pattern: /misc/{node_id}/add_login
+    defaults: { _controller: UCLWebKeyPassBundle:MiscNode:addLogin }
 
 ucl_wkp_misc_add_misc:
     pattern: /misc/{node_id}/add_misc
