--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -67,6 +67,10 @@ ucl_wkp_server_add_login:
     pattern: /server/{node_id}/add_login
     defaults: { _controller: UCLWebKeyPassBundle:ServerNode:addLogin }
 
+ucl_wkp_server_remove_login:
+    pattern: /server/{node_id}/remove_login_{auth_id}
+    defaults: { _controller: UCLWebKeyPassBundle:ServerNode:removeLogin }
+
 ucl_wkp_server_add_vm:
     pattern: /server/{node_id}/add_vm
     defaults: { _controller: UCLWebKeyPassBundle:ServerNode:addVM }
@@ -97,6 +101,10 @@ ucl_wkp_vm_add_login:
     pattern: /vm/{node_id}/add_login
     defaults: { _controller: UCLWebKeyPassBundle:VMNode:addLogin }
 
+ucl_wkp_vm_remove_login:
+    pattern: /vm/{node_id}/remove_login_{auth_id}
+    defaults: { _controller: UCLWebKeyPassBundle:VMNode:removeLogin }
+
 ucl_wkp_vm_add_misc:
     pattern: /vm/{node_id}/add_misc
     defaults: { _controller: UCLWebKeyPassBundle:VMNode:addMisc }
@@ -122,6 +130,10 @@ ucl_wkp_misc_edit:
 ucl_wkp_misc_add_login:
     pattern: /misc/{node_id}/add_login
     defaults: { _controller: UCLWebKeyPassBundle:MiscNode:addLogin }
+
+ucl_wkp_misc_remove_login:
+    pattern: /misc/{node_id}/remove_login_{auth_id}
+    defaults: { _controller: UCLWebKeyPassBundle:MiscNode:removeLogin }
 
 ucl_wkp_misc_add_misc:
     pattern: /misc/{node_id}/add_misc
