--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -147,8 +147,24 @@ ucl_wkp_misc_remove:
     pattern: /misc/{node_id}/remove
     defaults: { _controller: UCLWebKeyPassBundle:MiscNode:remove }
 
+# Admin zone
+
+ucl_wkp_admin:
+    pattern: /admin
+    defaults: { _controller: UCLWebKeyPassBundle:Admin:admin }
+
 # Other
 
 ucl_wkp_search:
     pattern: /search
     defaults: { _controller: UCLWebKeyPassBundle:Search:search }
+
+ucl_wkp_login:
+    pattern: /login
+    defaults: { _controller: UCLWebKeyPassBundle:Security:login }
+
+ucl_wkp_login_check:
+    pattern: /login_check
+
+ucl_wkp_logout:
+    pattern: /logout
