--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -1,16 +1,16 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        UCL\WebKeyPassBundle\Entity\User:
+            algorithm:        sha1
+            encode_as_base64: false
+            iterations:       1
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        administrators:
+            entity: { class: UCLWebKeyPassBundle:User, property: username }
 
     firewalls:
         login:
