--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -25,7 +25,7 @@ security:
                 always_use_default_target_path: true
                 default_target_path: /WebKeyPass/login_success
             logout:
-                path:   /WebKeyPass/logout
+                path:   /WebKeyPass/logout_real
                 target: /WebKeyPass/
 
     access_control:
