--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -183,6 +183,10 @@ ucl_wkp_change_password:
     pattern: /change_password
     defaults: { _controller: UCLWebKeyPassBundle:RootNode:changePassword }
 
+ucl_wkp_create_account:
+    pattern: /create_account
+    defaults: { _controller: UCLWebKeyPassBundle:CreateAccount:createAccount }
+
 ucl_wkp_login:
     pattern: /login
     defaults: { _controller: UCLWebKeyPassBundle:Security:login }
