Show message on session timeout
More complicated than expected, finally it is simpler to use the PHP
function setcookie() than using the Symfony API…

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -246,5 +246,9 @@ ucl_wkp_logout:
     pattern: /logout
     defaults: { _controller: UCLWebKeyPassBundle:Security:logLogout }
 
+ucl_wkp_automatic_logout:
+    pattern: /automatic_logout
+    defaults: { _controller: UCLWebKeyPassBundle:Security:automaticLogout }
+
 ucl_wkp_logout_real:
     pattern: /logout_real
