--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -209,6 +209,10 @@ ucl_wkp_admin_remove_icon:
     pattern: /admin/remove_icon/{icon}
     defaults: { _controller: UCLWebKeyPassBundle:Admin:removeIcon }
 
+ucl_wkp_admin_show_settings:
+    pattern: /admin/settings
+    defaults: { _controller: UCLWebKeyPassBundle:Admin:showSettings }
+
 ucl_wkp_admin_set_can_create_account_setting:
     pattern: /admin/set_can_create_account/{new_value}
     defaults: { _controller: UCLWebKeyPassBundle:Admin:setCanCreateAccount }
