Admin zone: export nodes and passwords in JSON format

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -221,6 +221,14 @@ ucl_wkp_admin_set_session_expiration_timeout_setting:
     pattern: /admin/set_session_expiration_timeout
     defaults: { _controller: UCLWebKeyPassBundle:Admin:setSessionExpirationTimeout }
 
+ucl_wkp_admin_export:
+    pattern: /admin/export
+    defaults: { _controller: UCLWebKeyPassBundle:Admin:export }
+
+ucl_wkp_admin_do_export:
+    pattern: /admin/do_export
+    defaults: { _controller: UCLWebKeyPassBundle:Admin:doExport }
+
 # Other
 
 ucl_wkp_search:
