--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -91,6 +91,10 @@ ucl_wkp_server_move:
     pattern: /server/{node_id}/move
     defaults: { _controller: UCLWebKeyPassBundle:ServerNode:move }
 
+ucl_wkp_server_clone:
+    pattern: /server/{node_id}/clone
+    defaults: { _controller: UCLWebKeyPassBundle:ServerNode:clone }
+
 ucl_wkp_server_remove:
     pattern: /server/{node_id}/remove
     defaults: { _controller: UCLWebKeyPassBundle:ServerNode:remove }
@@ -124,6 +128,10 @@ ucl_wkp_vm_add_misc:
 ucl_wkp_vm_move:
     pattern: /vm/{node_id}/move
     defaults: { _controller: UCLWebKeyPassBundle:VMNode:move }
+
+ucl_wkp_vm_clone:
+    pattern: /vm/{node_id}/clone
+    defaults: { _controller: UCLWebKeyPassBundle:VMNode:clone }
 
 ucl_wkp_vm_remove:
     pattern: /vm/{node_id}/remove
